# MCP-py-bot

./: .pre-commit-config.yaml  AGENTS.md  README.md  modelscope.txt  pyproject.toml  server_sse.py
.github/workflows/: ci.yml
mcp_calc/: MANIFEST.in  pyproject.toml  setup.py
mcp_calc/config/: config.json
mcp_calc/src/: server_sse.py
src/pycalc_sse/: __init__.py  server.py
tests/: test_eval.py
