[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycalc-sse"
version = "1.0.0"
description = "A minimal FastMCP calculator server over Server-Sent Events (SSE)."
readme = "README.md"
authors = [{ name = "FastMCP" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "fastmcp>=2.0.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/your-username/pycalc-sse"
Repository = "https://github.com/your-username/pycalc-sse"

[project.scripts]
pycalc-sse = "pycalc_sse.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pycalc_sse*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

